# SilentTanks

./: CMakeLists.txt  README.md  client-postinst.sh  mapfile.txt  server-list.txt  server-postinst.sh
Asset Creation Files/: DuelTemplate.txt  FFA3Template.txt  FFA5Template.txt  color-scheme.md
THIRD_PARTY_LICENSES/: ARGON2  GLAZE_license  LIBPQXX_license
builds/: testenv.txt
cmake/: FindArgon2.cmake  Findlibpqxx.cmake  Findlibsodium.cmake
envs/: Duel_1.txt  FFA3_1.txt  FFA3_2.txt  FFA5_ridge.txt  FFA_3.txt  FFA_5.txt  test2.txt
packaging/linux/: silent-tanks.desktop
packaging/server/: postinst  silent-tanks-server
packaging/windows/: copy-dlls.sh  resources.rc.in
qml/: BoardView.qml  ChatBox.qml  ConnectPage.qml  FriendMenu.qml  FriendsList.qml  GamePage.qml  InfoPopup.qml  Lobby.qml  LoginPage.qml  Main.qml  MatchHistory.qml  ModeMenus.qml  Profile.qml  QueueArea.qml  QueueMenus.qml  ReplayPage.qml  ReplayView.qml  ServerDetailsPopup.qml  SoundManager.qml  SvgButton.qml  UserListPopup.qml  qml-resources.qrc
setup/: create-self-signed-cert.sh  create-tables.sql  create_self_signed_cert.sh  create_tables.sql  setup-database.sh
src/: CMakeLists.txt  cell-type.h  environment.cpp  environment.h  flat-array.cpp  flat-array.h  game-instance.cpp  game-instance.h  grid-cell.cpp  grid-cell.h  main.cpp  tank-entity.cpp  tank-entity.h
src/client/: CMakeLists.txt  client-constants.h  client-data.cpp  client-data.h  client-session.cpp  client-session.h  client-state.h  client.cpp  client.h  game-manager.cpp  game-manager.h  gui-client.cpp  gui-client.h  main-client.cpp  match-history-model.cpp  match-history-model.h  message-model.cpp  message-model.h  popup.h  replay-manager.cpp  replay-manager.h  server-list.cpp  server-list.h  user-list-model.cpp  user-list-model.h
src/libgame/: CMakeLists.txt  cell-type.h  constants.h  environment.cpp  environment.h  flat-array.cpp  flat-array.h  game-instance.cpp  game-instance.h  game-state.h  game-threads.cpp  grid-cell.cpp  grid-cell.h  maps.cpp  maps.h  move-status.h  player-view.h  player.cpp  player.h  tank-entity.cpp  tank-entity.h  vec2.h
src/protocol/: CMakeLists.txt  asset-resolver.h  command.h  cryptography-constants.h  external-user.h  gamemodes.h  generic-constants.h  header.cpp  header.h  match-result-structs.h  match-settings.h  message-structs.h  message.cpp  message.h  server-identity.cpp  server-identity.h
src/server/: CMakeLists.txt  command.h  console-dispatch.h  console.cpp  console.h  database.cpp  database.h  elo-updates.cpp  elo-updates.h  header.cpp  header.h  keyed-executor.h  main-server.cpp  map-repository.cpp  map-repository.h  match-instance.cpp  match-instance.h  match-maker.cpp  match-maker.h  match-result-recorder.cpp  match-result-recorder.h  match-result.h  match-settings.h  match-strategy.cpp  match-strategy.h  message.cpp  message.h  server.cpp  server.h  session.cpp  session.h  user-data.h  user-manager.cpp  user-manager.h  user.h
